# Dpush

./: .gitignore  .gitmodules  README.md
client/web/: metadata.json  package-lock.json  package.json  placeholder.ts  tsconfig.json  vite.config.ts
client/web/src/: App.tsx  index.css  schema.fbs  types.ts
client/web/src/components/: ApiKeyPrompt.tsx  Auth.tsx  Chat.tsx
client/web/src/utils/: fb-helper.ts
server/: CMakeLists.txt
server/AuthServer/: CMakeLists.txt
server/AuthServer/base/: md5.cc
server/AuthServer/mysql/: BlockQueue.h  CMakeLists.txt  MySQLConn.cc  MySQLConnPool.cc  MySQLWorker.cc  MySQLWorker.h  SQLOperation.cc  SQLOperation.h
server/AuthServer/server/: AuthServiceImpl.cc  AuthServiceImpl.h  CMakeLists.txt  main.cc
server/Benchmark/: CMakeLists.txt
server/Benchmark/GatewayBenchmark/: load_test.js  tcp_test.js
server/Benchmark/LogicBenchmark/: CMakeLists.txt  MaxConnBenchmark.cc
server/Benchmark/mysqlBenchmark/: CMakeLists.txt  main.cc
server/GatewayServer/: CMakeLists.txt
server/GatewayServer/base/: base64.cc  types.h
server/GatewayServer/config/: server.conf
server/GatewayServer/muduo/base/: LogStream.h  Logging.h  Timestamp.cc
server/GatewayServer/muduo/http/: CMakeLists.txt  HttpRequest.cc  HttpRequest.h  HttpServer.cc  HttpServer.h
server/GatewayServer/muduo/net/: Acceptor.cc  Acceptor.h  Buffer.h  CMakeLists.txt  Channel.cc  Channel.h  EventLoop.cc  EventLoop.h  EventLoopThreadPool.cc  EventLoopThreadPool.h  Poller.cc  Poller.h  SocketsOps.cc  TcpConnection.cc  TcpConnection.h  TcpServer.cc  TcpServer.h
server/GatewayServer/muduo/net/inspect/: Inspector.cc
server/GatewayServer/muduo/net/poller/: EPollPoller.cc
server/GatewayServer/server/: CMakeLists.txt  GatewayPubSubManager.cc  GatewayPubSubManager.h  GatewayServer.cc  GatewayServer.h  LRUCache.h  grpcClient.cc  grpcClient.h  handleHttpEvent.cc  handleHttpEvent.h  handleUpgradeEvent.cc  handleUpgradeEvent.h  iouring.h  main.cc  producer.cc  producer.h  websocketConn.cc  websocketConn.h
server/GatewayServer/server/httpServer/: CMakeLists.txt  HttpContext.cc  HttpContext.h  HttpResponse.cc  HttpResponse.h  HttpServer.cc  HttpServer.h
server/LogicServer/: CMakeLists.txt
server/LogicServer/base/: SnowflakeIdWorker.h  threadPool.h  typeCommon.h
server/LogicServer/server/: CMakeLists.txt  KafkaConsumer.cc  KafkaConsumer.h  LogicGrpcServer.cc  LogicGrpcServer.h  LogicServer.cc  LogicServer.h  main.cc
server/RoomServer/: CMakeLists.txt
server/RoomServer/server/: CMakeLists.txt  main.cc  roomServer.cc  roomServer.h
server/StorageServer/: CMakeLists.txt
server/StorageServer/server/: CMakeLists.txt  StorageServer.cc  StorageServer.h  storageConsumer.cc  storageConsumer.h
server/base/: JsonView.h  test  test.cc
server/config/: auth.yaml  bootstrap.yaml  gateway.yaml  gateway_2.yaml  logic.yaml  private.pem  public.pem  room.yaml
server/flatbuffers/: chat.fbs  chat_generated.h  http.fbs
server/libs/: CMakeLists.txt
server/libs/concurrency/: CMakeLists.txt  ComputeThreadPool.h  OrderedThreadPool.h  coroutineTask.h
server/libs/crypto/: CMakeLists.txt  base64.h  md5.h
server/libs/storage/AsyncMySQLConnPool/: AsioBridge.h  AsyncMysqlCluster.cc  AsyncMysqlCluster.h  AsyncMysqlConn.cc  AsyncMysqlConn.h  AsyncMysqlConnPool.cc  AsyncMysqlConnPool.h  CMakeLists.txt
server/libs/storage/mysql/: CMakeLists.txt  MySQLConn.cc  MySQLConn.h  MySQLConnPool.h  SQLOperation.cc
server/libs/tools/etcdServiceNode/: CMakeLists.txt  ServiceNode.cc  ServiceNode.h
server/libs/tools/muduo/base/: CMakeLists.txt
server/libs/tools/muduo/net/http/: CMakeLists.txt
server/libs/tools/yyjson/: CMakeLists.txt  yyjson.c
server/libs/utils/: CMakeLists.txt  types.cc  types.h
server/proto/: CMakeLists.txt  auth.proto  gateway.proto  logic.proto  room.proto
server/scripts/: start.sh  stop.sh
server/services/: CMakeLists.txt
server/services/Auth/: CMakeLists.txt
server/services/Auth/server/: AuthServiceImpl.cc  AuthServiceImpl.h  CMakeLists.txt  main.cc
server/services/Dispatch/: CMakeLists.txt
server/services/Dispatch/httpServer/: CMakeLists.txt  HttpContext.cc  HttpResponse.cc  HttpResponse.h  HttpServer.cc  HttpServer.h
server/services/Dispatch/server/: CMakeLists.txt  DispatchServer.cc  DispatchServer.h  main.cc
server/services/Gateway/server/: CMakeLists.txt  GatewayPubSubManager.cc  GatewayPubSubManager.h  GatewayRegister.cc  GatewayRegister.h  GatewayServer.cc  GatewayServer.h  config.cc  config.h  grpcClient.cc  grpcClient.h  grpcServer.cc  grpcServer.h  handleHttpEvent.cc  handleHttpEvent.h  handleUpgradeEvent.cc  heartbeatManager.cc  heartbeatManager.h  iouring.h  main.cc  producer.cc  producer.h  websocketConn.cc  websocketConn.h  websocketSession.cc  websocketSession.h  wsServer.cc  wsServer.h
server/services/Gateway/server/httpServer/: CMakeLists.txt  HttpContext.cc  HttpRequest.cc  HttpServer.cc  HttpServer.h
server/services/Logic/: CMakeLists.txt
server/services/Logic/server/: CMakeLists.txt  KafkaConsumer.cc  KafkaConsumer.h  LogicDiscovery.cc  LogicDiscovery.h  LogicGrpcServer.cc  LogicGrpcServer.h  LogicServer.cc  LogicServer.h  grpcClient.cc  grpcClient.h  main.cc
server/services/Room/: CMakeLists.txt
server/services/Room/server/: CMakeLists.txt  main.cc  roomServer.cc  roomServer.h
server/services/Storage/: CMakeLists.txt
server/services/Storage/server/: CMakeLists.txt  StorageServer.cc  StorageServer.h  main.cc  storageConsumer.cc  storageConsumer.h
